# munch_chatbot

./: .gitignore  Procfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  settings.py  speech_to_text.py
src/bot/: main.py  settings.py  speech_to_text.py  vector_shift.py
